--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   <link href="css/css.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body style="background-image: url(img/back.png);">
   <header>
     <h1>side</h1>
   </header>
-  <div id="branding">
+  <div id="branding" style="background-image: url(img/back.jpg);">
     <p>sideのwebページです</p>
   </div>
   <nav>
     <ul>
-      <li><a href="index.html">ホーム</a></li>
-      <li><a href="me.html">自己紹介</a></li>
-      <li><a href="side_made.html">製作物</a></li>
-      <li><a href="others.html">その他</a></li>
+      <li><a href="index.html"class="btn">&gt;ホーム</a></li>
+      <li><a href="me.html"class="btn">&gt;自己紹介</a></li>
+      <li><a href="side_made.html"class="btn">&gt;製作物</a></li>
+      <li><a href="others.html"class="btn">&gt;その他</a></li>
     </ul>
   </nav>
   <section>
